--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,15 @@
-@media (min-width: 321px) and (max-width: 768px) {
+@media only screen and (max-width: 767.98px) {
+  .header-nav-list {
+    display: none;
+  }
+  .address {
+    display: none;
+  }
+  .logo {
+    padding: 16px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1157.98px) {
   .our-benefits {
     text-align: start;
   }
@@ -29,9 +40,8 @@
   .our-portfolio-items {
     width: calc((100% - 24px) / 2);
   }
-
 }
-@media (min-width: 769px) {
+@media (min-width: 1158px) {
   .page-title {
     font-size: 56px;
     line-height: 1.07;
