--- a/css/media.css
+++ b/css/media.css
@@ -143,6 +143,7 @@
       gap: 40px;
     }
     .address {
+      justify-content: center;
       display: flex;
     }
   /*section 1*/
@@ -159,6 +160,8 @@
   }
   .section-one {
     padding: 188px 0;
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office.jpg);
   }
   
   /*section 2*/
@@ -208,6 +211,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
   .footer .text {
       color: #F4F4FD;
@@ -225,19 +230,28 @@
   }
   .subscribe-text {
     text-align: left;
+    margin-top: 0;
   }
   .social-media-text {
     text-align: left;
   }
+  .footer-button {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
   .footer-form {
       display: flex;
       gap: 24px;
+      align-items: center;
+  }
+  .form-footer {
+    margin-left: 80px;
   }
   .footer-icon {
       margin-left: 16px;
   }
-  .footer-icons {
-      margin-right: auto;
+  .menu-toggle-icon {
+    display: none;
   }
 }
 
