--- a/css/media.css
+++ b/css/media.css
@@ -141,6 +141,7 @@
       align-items: center;
       justify-content: flex-start;
       gap: 40px;
+      margin-left: 76px;
     }
     .address {
       justify-content: center;
